Add changes to generic Iborn Processes Presenation

--- a/IbornProcesses/index.html
+++ b/IbornProcesses/index.html
@@ -39,29 +39,22 @@
             <!--<section id="titleSection" data-background="images/background.jpg" data-background-repeat="repeat" data-background-size="100px">-->
             <section id="titleSection">
                 <hr />
-                <h3>Econt projects</h3>
-                <h4> Behavior driven development </h4>
+                <h3>Software development methodology at IBORN.NET</h3>
+                <h4> based on </h4>
                 <h4> Specification by Example </h4>
                 <hr />
                 <div>
-                    <img src="images/LogoTransparent.jpg" style="margin-top:20px; margin-left:20px; width: 150px; height: 150px; border: none; background: none"
-                    />
-                    <img src="images/BDD/econtLogo.jpg" style="margin-top:20px; margin-left:20px; width: 150px; height: 150px; border: none; background: none"
-                    />
+                    <img src="images/LogoTransparent.jpg" style="margin-top:20px; margin-left:20px; width: 150px; height: 150px; border: none; background: none"/>                    
                 </div>
                 <div>
                     <div style="text-align: center">
                         iborn.net
                     </div>
                 </div>
-
                 <p style="margin-top: 20px; clear: both">
-                    <small>Ruse 2016</small>
+                    <small>Skopje 2017</small>
                 </p>
             </section>
-
-
-
             <section id="thirdSection">
                 <section>
                     <h3>Building the product right and building the right product</h3>
@@ -74,7 +67,7 @@
                     <ul>
                         <li>Shared understanding of what needs to be done</li>
                         <li>Precise specification</li>
-                        <li>DoD (Definition Of Done)</li>
+                        <li>Definition Of Done (DoD)</li>
                         <li>Documentation</li>
                     </ul>
                 </section>
@@ -163,9 +156,9 @@
                 <section>
                     <h3> Daily stand-up meetings</h3>
                     <ul>
-                        <li> Conversation around user stories </li>
-                        <li> Adding new scenarios </li>
-                        <li> Status and progress </li>
+                        <li>Conversation around user stories </li>
+                        <li>Adding new scenarios </li>
+                        <li>Status and progress </li>
                     </ul>
                     <div class="margin-top">
                         <img src="images/BDD/bd.png" />
@@ -332,31 +325,36 @@
             </section>
             <section id="6thSection">
                 <section>
-                    <h3>BDD in Java</h3>
+                    <h3>BDD in .NET</h3>
                     <div>
-                        <img src="images/BDD/bdd-workflow.png" />
+                        <img src="images/BDD/bdd-net.png" />
                     </div>
                     <ul>
-                        <li>Cucumber JVM - https://cucumber.io/docs/reference/jvm</li>
-                        <li>JBehave - http://jbehave.org/</li>
+                        <li>SpecFlow.NET - http://specflow.org/</li>                        
                     </ul>
                 </section>
                 <section>
                     <h3>The piece of code I want to test</h3>
                     <div>
-                        <img src="images/BDD/Cucumber1.png" />
+                        <img src="images/BDD/SpecFlow-Getting Started-SpecFlow-NET.png" />
                     </div>
                 </section>
                 <section>
                     <h3>Creating feature files</h3>
                     <div>
-                        <img src="images/BDD/Cucumber2.png" />
+                        <img src="images/BDD/SpecFlow-Getting-Started-SpecFlow-Cucumber-for-NET.png" />
+                    </div>
+                </section>                
+                <section>
+                    <h3>Generate the necessary steps</h3>
+                    <div>
+                        <img src="images/BDD/GenerateStepDefinitionSkeleton.png" />
                     </div>
                 </section>
                 <section>
                     <h3>Implementing the necessary steps</h3>
                     <div>
-                        <img src="images/BDD/Cucumber3.png" />
+                        <img src="images/BDD/InitialSkeleton.png" />
                     </div>
                 </section>
             </section>
