Modify presentation contents, add Google Analytics tracking

--- a/IbornProcesses/index.html
+++ b/IbornProcesses/index.html
@@ -40,15 +40,13 @@
             <section id="titleSection">
                 <hr />
                 <h3>Software development methodology at IBORN.NET</h3>
-                <h4> based on </h4>
-                <h4> Specification by Example </h4>
                 <hr />
                 <div>
                     <img src="images/LogoTransparent.jpg" style="margin-top:20px; margin-left:20px; width: 150px; height: 150px; border: none; background: none"/>                    
                 </div>
                 <div>
                     <div style="text-align: center">
-                        iborn.net
+                        <a href="http://www.iborn.net">iborn.net</a>
                     </div>
                 </div>
                 <p style="margin-top: 20px; clear: both">
@@ -84,71 +82,25 @@
                     <div>
                         <img src="images/BDD/UserStory.png" />
                     </div>
-                </section>
-                <section>
-                    <h3> User Story </h3>
-                    <ul>
-                        <li>
-                            "I" ndependent (of all others)
-                        </li>
-                        <li>
-                            "N" egotiable (not a specific contract for features)
-                        </li>
-                        <li>
-                            "V" aluable
-                        </li>
-                        <li>
-                            "E" stimatable (to a good approximation)
-                        </li>
-                        <li>
-                            "S" mall (so as to fit within an iteration)
-                        </li>
-                        <li>
-                            "T" estable (in principle, even if there isn't a test for it yet)
-                        </li>
-                    </ul>
-                </section>
-                <section>
-                    <h3>The structure</h3>
-                    <div>
-                        <img src="images/BDD/Structure.png" />
-                    </div>
-                </section>
-                <section>
-                    <h3>The narrative part</h3>
-                    <div>
-                        <img src="images/BDD/UserStory2.png" />
-                    </div>
-                </section>
+                </section>              
                 <section>
                     <h3>Acceptance criteria</h3>
                     <div>
                         <img src="images/BDD/bdd-feature.png" />
                     </div>
                 </section>
-                <section>
-                    <h3>Given - When - Then </h3>
-                    <div>
-                        <img src="images/BDD/GivenWhenThen.png" />
-                    </div>
-                </section>
-                <section>
-                    <h3>Example </h3>
-                    <div>
-                        <img src="images/BDD/UserStoryExample.png" />
-                    </div>
-                </section>
             </section>
-
             <section id="section6">
                 <section>
-                    <h3> Optimizing the planning. Imrpoving the scrum methodology </h3>
+                    <h3> Optimizing the planning</h3>
+                    <h4> Improving the scrum methodology</hr>
                     <div class="margin-top">
                         <img src="images/BDD/Scrum.png" />
                     </div>
                 </section>
                 <section>
-                    <h3> Product backlog needs to be in a form of a user stories </h3>
+                    <h3> Product backlog</h3>
+                    <h4>  needs to be in a form of a user stories </h4>
                     <div class="margin-top">
                         <img src="images/BDD/backlog.png" />
                     </div>
@@ -178,14 +130,14 @@
                 </section>
             </section>
             </section>
-
             <section id="fthsection">
-                <h3> Benefits </h3>
+                <h3>Bridging the communication gap</h3>
+                <h5>Communication with the stakeholders provides the following benefits:</h5>
                 <ul>
                     <li>Implementing changes more efficiently</li>
                     <li>Higher product quality</li>
                     <li>Less rework</li>
-                    <li>Better alignment of the activities of different roles on a project</li>
+                    <li>Better alignment of activities for the different roles on the project</li>
                 </ul>
                 <br />
                 <div class="margin-top">
@@ -194,6 +146,7 @@
             </section>
 
             <section id="emptySection">
+                <h2>Software development process</h2>
             </section>
 
             <section id="section7">
@@ -299,22 +252,9 @@
                         <img style="height:600px" src="images/BDD/SBE.png" />
                     </div>
                 </section>
+
                 <section>
-                    <h3> Examples </h3>
-                    <ul>
-                        <li>
-                            <a href="https://docs.google.com/document/d/1CONMMXokYPGb90Kcso5GHnaOTqqcAthdN9QCuI3hgl4/edit" target="_blank">Epic 1 </a>
-                        </li>
-                        <li>
-                            <a href="https://docs.google.com/document/d/1D_HrJ6T4QXZqFvMlRFYPUSYok4UYvI44gJN-EtCGlMg/edit" target="_blank"> Epic 2 </a>
-                        </li>
-                        <li>
-                            <a href="https://docs.google.com/document/d/1624AthFoI7ahpZej_9tj7UYdZAfEXkRpsQPKFiAG5cY/edit" target="_blank"> Epic 3 </a>
-                        </li>
-                    </ul>
-                </section>
-                <section>
-                    <h3>Redmine</h3>
+                    <h3>Project management tool - Redmine</h3>
                     <ul>
                         <li>
                             <a href="https://projects.iborn.net/projects/warning/issues?utf8=%E2%9C%93&set_filter=1&f%5B%5D=status_id&op%5Bstatus_id%5D=o&f%5B%5D=&c%5B%5D=tracker&c%5B%5D=status&c%5B%5D=priority&c%5B%5D=author&c%5B%5D=subject&c%5B%5D=assigned_to&c%5B%5D=updated_on&c%5B%5D=fixed_version&c%5B%5D=start_date&c%5B%5D=due_date&c%5B%5D=estimated_hours&c%5B%5D=spent_hours&group_by=tracker"
@@ -326,6 +266,7 @@
             <section id="6thSection">
                 <section>
                     <h3>BDD in .NET</h3>
+                    <h4>Behaviour driven development </h4>
                     <div>
                         <img src="images/BDD/bdd-net.png" />
                     </div>
@@ -333,6 +274,7 @@
                         <li>SpecFlow.NET - http://specflow.org/</li>                        
                     </ul>
                 </section>
+                <!--
                 <section>
                     <h3>The piece of code I want to test</h3>
                     <div>
@@ -357,11 +299,11 @@
                         <img src="images/BDD/InitialSkeleton.png" />
                     </div>
                 </section>
+                -->
             </section>
-
-
             <section id="closingSection">
                 <h2>THANK YOU!</h2>
+                <p> Contact us at <strong>hello@iborn.net</strong>, we would love to hear from you!</p>
             </section>
 
         </div>
@@ -371,7 +313,7 @@
     <script src="js/reveal.js"></script>
 
     <script>
-
+        var gaPropertyID = 'UA-46551710-11';
         // Full list of configuration options available here:
         // https://github.com/hakimel/reveal.js#configuration
         Reveal.initialize({
@@ -390,6 +332,7 @@
                 //{ src: 'plugin/markdown/markdown.js', condition: function () { return !!document.querySelector('[data-markdown]'); } },
                 { src: 'plugin/highlight/highlight.js', async: true, callback: function () { hljs.initHighlightingOnLoad(); } },
                 { src: 'plugin/zoom-js/zoom.js', async: true, condition: function () { return !!document.body.classList; } },
+                { src: 'plugin/reveal-ga/reveal-ga.min.js' },
                 { src: 'plugin/notes/notes.js', async: true, condition: function () { return !!document.body.classList; } }
                 // { src: 'plugin/search/search.js', async: true, condition: function() { return !!document.body.classList; } }
                 // { src: 'plugin/remotes/remotes.js', async: true, condition: function() { return !!document.body.classList; } }
