Fix wrong html elements

--- a/IbornProcesses/index.html
+++ b/IbornProcesses/index.html
@@ -93,7 +93,7 @@
             <section id="section6">
                 <section>
                     <h3> Optimizing the planning</h3>
-                    <h4> Improving the scrum methodology</hr>
+                    <h4> Improving the scrum methodology</h4>
                     <div class="margin-top">
                         <img src="images/BDD/Scrum.png" />
                     </div>
@@ -127,8 +127,7 @@
                     <div class="margin-top">
                         <img src="images/BDD/workflow.png" />
                     </div>
-                </section>
-            </section>
+                </section>            
             </section>
             <section id="fthsection">
                 <h3>Bridging the communication gap</h3>
