Upgrade of reveal.js to version 3.5.0 and upgrade other missing components

--- a/IbornProcesses/index.html
+++ b/IbornProcesses/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
 
-    <title>iborn.net</title>
+    <title>iborn.net - Iborn Processes</title>
 
     <meta name="description" content="">
     <meta name="author" content="iborn.net">
@@ -94,15 +94,15 @@
                 <section>
                     <h3> Optimizing the planning</h3>
                     <h4> Improving the scrum methodology</h4>
-                    <div class="margin-top">
-                        <img src="images/BDD/Scrum.png" />
+                    <div>
+                        <img src="images/BDD/Scrum.png" style="margin-top:20px; margin-left:20px; width: 900px; border: none; background: none" />
                     </div>
                 </section>
                 <section>
                     <h3> Product backlog</h3>
                     <h4>  needs to be in a form of a user stories </h4>
-                    <div class="margin-top">
-                        <img src="images/BDD/backlog.png" />
+                    <div>
+                        <img src="images/BDD/backlog.png" style="margin-top:20px; margin-left:20px; width: 900px; border: none; background: none"/>
                     </div>
                 </section>
                <!--
@@ -113,19 +113,19 @@
                         <li>Adding new scenarios </li>
                         <li>Status and progress </li>
                     </ul>
-                    <div class="margin-top">
+                    <div>
                         <img src="images/BDD/bd.png" />
                     </div>
                 </section>
                 <section>
                     <h3> Burn-down chart improvements</h3>
-                    <div class="margin-top">
+                    <div>
                         <img src="images/BDD/burnDownChart.png" />
                     </div>
                 </section>
                 <section>
                     <h3> Workflow of user stories</h3>
-                    <div class="margin-top">
+                    <div>
                         <img src="images/BDD/workflow.png" />
                     </div>
                 </section>            
@@ -141,7 +141,7 @@
                     <li>Better alignment of activities for the different roles on the project</li>
                 </ul>
                 <br />
-                <div class="margin-top">
+                <div>
                     <img src="images/BDD/bdd.jpg" />
                 </div>
             </section>
@@ -153,7 +153,7 @@
             <section id="section7">
                 <section>
                     <h3> Git Branching Model</h3>
-                    <div class="margin-top">
+                    <div>
                         <img src="images/BDD/git-model@2x.png" />
                     </div>
                 </section>
